--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ h2{
   text-shadow: 0 0 5px #ffa500, 
               0 0 10px #ffa500, 
               0 0 10px #ffa500, 
-              0 0 40px #ffa500, 
+              0 0 40px #fca505, 
               0 0 60px #ff0000, 
               0 0 10px #ff8d00, 
               0 0 98px #ff0000;
